--- a/static/sass/components/_component.subscription.scss
+++ b/static/sass/components/_component.subscription.scss
@@ -75,6 +75,7 @@
                 border-bottom: 1px solid $grey4;
                 padding-bottom: 20px;
                 margin-bottom: 7px;
+                min-height: 160px;
 
                 &-name {
                     color: $blue_sh5;
@@ -172,6 +173,10 @@
                     position: absolute;
                     bottom: 0;
                     border-radius: 6px;
+                    @include flexbox;
+                    @include align-items(center);
+                    @include justify-content(center);
+                    text-decoration: none;
                 }
             }
 
