--- a/coming-soon.twig
+++ b/coming-soon.twig
@@ -10,8 +10,8 @@
                     </aside>
                     <aside class="g-commingSoon__main-rs">
                         <p>We are working on our new website, it’s not far away. Stay connected and get notified when we go live.</p>
-                        <input type="text" placeholder="Email address" />
-                        <button type="submit" class="g-commingSoon__btn">Connect</button>
+                        <input type="text" class="g-commingSoon__main__input" placeholder="Email address" />
+                        <button type="submit" class="g-commingSoon__main__btn">Connect</button>
                     </aside>
                 </div>
             </div>
