--- a/thank-you.twig
+++ b/thank-you.twig
@@ -6,55 +6,38 @@
         {% set thankyou = config['thank-you-page'] %}
 {% endif %}
 
-<main id="main" class="site-main" role="main">
-	<div class="o-media-hero relative">
-        <figure class="o-media-slider">
-            <picture class="image-cover">
-                {% if thankyou['image']['url'] is defined and thankyou['image']['url'] != '' %}
-                        <img class="image-cover" src="{{thankyou['image']['url']}}" alt="Banner Image" />
-                {% else %}
-                        <!--[if IE 9]><video style="display:none;"><![endif]-->
-                        <source 
-                                media="(max-width:767px)"
-                                sizes="100vw"
-                                srcset="{{networkData.templatePath}}/static/images/banner/slide_02_Mobile.jpg 2x" />
-                        <source 
-                                media="(min-width:768px)"
-                                sizes="33.3vw"
-                                srcset="{{networkData.templatePath}}/static/images/banner/slide_02.jpg 1x" />
-                        <!--[if IE 9]></video><![endif]-->
-                        <img class="image-cover" sizes="(min-width:601px) 33vw, 100vw" srcset="{{networkData.templatePath}}/static/images/banner/slide_02_Mobile.jpg 767w, {{networkData.templatePath}}/static/images/banner/slide_02.jpg 1200w" alt="Banner Image" />
-                {% endif %}
-            </picture>
-            <div class="o-media-hero_overlay">
-                <div class="o-media-hero_caption">
-                        <div class="o-media-hero_caption_balance">
-                                <div class="container">
-                                        <div class="o-media-hero_caption_wrapper">
-                                                {% if thankyou['maintext'] is defined and thankyou['maintext'] != '' %}
-                                                        <h2 class="o-media-hero_text text">{{thankyou['maintext']}}</h2>
-                                                {% else %}
-                                                        <h2 class="o-media-hero_text text">Thank you for <br class="hidden-xs">subscribing.</h2>
-                                                {% endif %}
-                                                <p>Visit the <a class="u-color--main" href="{{networkData.defaultBlogUrl}}/user/edit-profile"><b>My Account</b></a> page to update your details.</p>
+<main id="main" class="site-main c-thankyouPage c-thankyouPage-xs" role="main">
+        <div class="container">
+                <div class="row">
+                        <div class="col-10 col-md-8 mx-auto">
+                                <div class="row">
+                                        <div class="col-12 col-md-5">
+                                                <img src="{{networkData.templatePath}}/static/icons/laptop_2.png" class="img-fluid" alt="image" />
+                                        </div>
+                                        <div class="col-12 col-md-6 offset-md-1">
+                                                <div class="c-thankyouPage__content">
+                                                        {% if thankyou['maintext'] is defined and thankyou['maintext'] != '' %}
+                                                                <h2 class="c-thankyouPage__content-heading">{{thankyou['maintext']}}</h2>
+                                                        {% else %}
+                                                                <h2 class="c-thankyouPage__content-heading">Thank you for <br class="d-none d-md-block">subscribing.</h2>
+                                                        {% endif %}
+                                                        <p class="c-thankyouPage__content-subText">Visit the <a href="{{networkData.defaultBlogUrl}}/user/edit-profile"><b>My Account</b></a> page to update your details.</p>
                                                 
-                                                {% set buttonUrl = networkData.defaultBlogUrl %}
-                                                {% set buttonText = 'Start Reading' %}
-                                                {% if thankyou['button']['url'] is defined and thankyou['button']['url'] != '' %}
-                                                        {% set buttonUrl = thankyou['button']['url'] %}
-                                                {% endif %}
-                                                {% if thankyou['button']['text'] is defined and thankyou['button']['text'] != '' %}
-                                                        {% set buttonText = thankyou['button']['text'] %}
-                                                {% endif %}                                                                                                
-                                                <div class="o-media-hero_button-set">
-                                                        <a class="c-button c-button--rounded c-button--background-white c-button--blue-bordered" href="{{buttonUrl}}">{{buttonText}}</a>
+                                                        {% set buttonUrl = networkData.defaultBlogUrl %}
+                                                        {% set buttonText = 'Start Reading' %}
+                                                        {% if thankyou['button']['url'] is defined and thankyou['button']['url'] != '' %}
+                                                                {% set buttonUrl = thankyou['button']['url'] %}
+                                                        {% endif %}
+                                                        {% if thankyou['button']['text'] is defined and thankyou['button']['text'] != '' %}
+                                                                {% set buttonText = thankyou['button']['text'] %}
+                                                        {% endif %}                                                                                                
+                                                        <div class="o-media-hero_button-set">
+                                                                <a class="c-button c-button--lightBlue c-button--radius mt-5 px-4" href="{{buttonUrl}}">{{buttonText}}</a>
+                                                        </div>
                                                 </div>
                                         </div>
                                 </div>
                         </div>
                 </div>
-            </div>
-        </figure>
-	</div>
-	<!-- End Hero Banner -->
+        </div>
 </main>
