static to dynamic text

--- a/layout-paywall.twig
+++ b/layout-paywall.twig
@@ -57,8 +57,8 @@
             <div class="row">
                 <div class="col-12">
                     <div class="c-subscriptions__content-text">
-                        <h1>Subscribe now to The News</h1>
-                        <p>Subscribe now to access the latest news, sport, weather and special features from our region. </p>
+                        <h1>{{subscribeText|raw}}</h1>
+                        <p>{{signupText|raw}}</p>
                     </div>
                 </div>
             </div>
