--- a/static/sass/components/_component.subscription.scss
+++ b/static/sass/components/_component.subscription.scss
@@ -425,7 +425,7 @@
                 font-weight: $weightBold;
                 max-width: 199px;
                 width: 100%;
-                height: 40px;
+                min-height: 40px;
                 text-align: center;
                 margin-bottom: 12px;
             }
