--- a/edit-profile.twig
+++ b/edit-profile.twig
@@ -174,20 +174,40 @@
                                     </div>
 
                                 </div>
-                                <div class="cus_acnt__infoBox__area">
-                                    <div class="cus_acnt__infoBox-head">
-                                        <div class="cus_acnt__infoBox-head--label">Payment details</div>
-                                        <a href="javascript:;" class="cus_acnt__infoBox-head--link">Update credit card</a>
+                                
+                                    <div class="cus_acnt__infoBox__area">
+                                        <div class="cus_acnt__infoBox-head">
+                                            <div class="cus_acnt__infoBox-head--label">Payment details</div>
+                                            <a href="javascript:;" class="cus_acnt__infoBox-head--link js-cus_acnt__showForm">Update credit card</a>
+                                        </div>
+                                        <div class="cus_acnt__infoBox-dataGrid">
+                                            <ul>
+                                                <li class="cus_acnt__infoBox-dataGrid-item">
+                                                    <span class="cus_acnt__infoBox-dataGrid-item--label">Payment method</span>
+                                                    <span class="cus_acnt__infoBox-dataGrid-item--value">**** **** **** {{ pwstats['card_last_4']}}</span>
+                                                </li>
+                                            </ul>
+                                        </div>
+
+                                        <div class="cus_acnt__infoBox-form cus_acnt__hide">
+                                            <form id="update-card-form" action="/update" method="post">
+                                                <div class="cus_acnt__form__group">
+                                                    <label class="cus_acnt__form__label c-form__label" for="creditcarddetails">Credit card</label>
+                                                        <div class="three-column">
+                                                            <div id="card-element">
+                                                            <!-- a Stripe Element will be inserted here. -->
+                                                            </div>
+                                                        </div>
+                                                </div>
+
+                                                <div class="cus_acnt__form__group cus_acnt__form__btns">
+                                                    <button type="submit" id="btnContact" class="js-cus_acnt__HideForm cus_acnt__btn cus_acnt__btn__solid" name="contact-button">Update details</button>
+                                                    <a href="javascript:;" id="" class="js-cus_acnt__HideForm cus_acnt__btn cus_acnt__btn__bordered" name="">Cancel</a>
+                                                </div>
+                                            </form>
+                                        </div>
                                     </div>
-                                    <div class="cus_acnt__infoBox-dataGrid">
-                                        <ul>
-                                            <li class="cus_acnt__infoBox-dataGrid-item">
-                                                <span class="cus_acnt__infoBox-dataGrid-item--label">Payment method</span>
-                                                <span class="cus_acnt__infoBox-dataGrid-item--value">**** **** **** {{ pwstats['card_last_4']}}</span>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </div>
+                                
                             </div>
                         </div>
                         <div class="cus_acnt-col-12 cus_acnt-col-lg-4 d-none">
