--- a/edit-profile.twig
+++ b/edit-profile.twig
@@ -174,7 +174,7 @@
                                     </div>
 
                                 </div>
-                                
+                                {% if pwstats.userManager == true %}
                                     <div class="cus_acnt__infoBox__area">
                                         <div class="cus_acnt__infoBox-head">
                                             <div class="cus_acnt__infoBox-head--label">Payment details</div>
@@ -207,7 +207,7 @@
                                             </form>
                                         </div>
                                     </div>
-                                
+                                {% endif %}
                             </div>
                         </div>
                         <div class="cus_acnt-col-12 cus_acnt-col-lg-4 d-none">
