make paywall signup work

--- a/static/sass/components/_component.subscription.scss
+++ b/static/sass/components/_component.subscription.scss
@@ -506,7 +506,13 @@
         .form-group {
             @include flexbox;
             @include flex-direction(column, vertical);
-
+            .formError { 
+                border: 1px solid red;
+            }
+            .errorText { 
+                font-weight: bold;
+                color: red;
+            }
             .input {
                 &__label {
                     @include font-size(16);
