--- a/layout-subscribe.twig
+++ b/layout-subscribe.twig
@@ -79,6 +79,7 @@
 
 <main id="main" class="o-body-container o-body-container-md u-margin-top-50" role="main">
     <div id="stripekey" class="d-none">{{networkData['stripe_publishable_key']}}</div>
+    <div id="paywallsubscribe" class="u-hide" ></div>
 
     <div class="container">
         {% if plan != false %}
@@ -138,7 +139,7 @@
 
                                 <h4 class="c-subscribeWrap__subhead">Your details</h4>
 
-                                <form id="subscribeform" class="generic-form form-contact contact__form" action="#"
+                                <form id="subscribeform" class="generic-form  " action="#"
                                     method="post" autocomplete="off" data-planprice="{{planPrice}}"
                                     data-planperiodcount="{{plan.period_count}}" data-planperiod="{{plan.period}}"
                                     data-trialperiod="{{trialPeriod}}">
@@ -276,73 +277,59 @@
                                         </div>
                                     </div>
 
+
+
+                                    <div class="c-subscribeWrap__subscription" style="margin-top:30px;">
+                                        {% if signup == false %}
+                                            <h4 class="c-subscribeWrap__subhead">Payment details</h4>
+                                        {% endif %}
+                                        <div class="form-group fullwidth">
+
+                                            {% if code %}
+                                                <div class="form-row ">
+                                                    <label for="code-redeem">Gift code </label>
+                                                    <div id="card-errors" class="errorText" role="alert"></div>
+                                                    <input type="text" class="articleExtendedData" name="code-redeem"
+                                                        id="code-redeem" value="" placeholder="0a1b-2c3d-4e5f" />
+                                                </div>
+
+                                                <div class="form-group" style="margin-top:30px;">
+                                                    <button type="submit" id="subscribe"
+                                                        class="c-button c-button-block c-button--lightBlue c-button--radius">Subscribe now</button>
+                                                </div>
+
+                                            {% else %}
+                                                {% if signup == false %}
+                                                        <div class="" style="min-width:100%">
+                                                            <div id="card-element">
+                                                                <!-- a Stripe Element will be inserted here. -->
+                                                            </div>
+                                                            <!-- Used to display form errors -->
+                                                            <div id="card-errors" class="errorText" role="alert"></div>
+                                                        </div>
+
+
+                                                        <div class="form-group" style="margin-top:30px;">
+                                                            <button type="submit" id="subscribe"
+                                                                class="c-button c-button-block c-button--lightBlue c-button--radius">Subscribe now</button>
+                                                        </div>
+                                                {% else %}
+                                                        <div class="form-group" style="margin-top:30px;">
+                                                            <button type="submit" id="subscribe"
+                                                                class="c-button c-button-block c-button--lightBlue c-button--radius">Subscribe now</button>
+                                                        </div>
+                                                {% endif %}
+                                            {% endif %}
+
+                                        </div>
+                                    </div>
+
+
+
+
                                 </form>
 
-                                <div class="c-subscribeWrap__subscription" style="margin-top:30px;">
-                                    {% if signup == false %}
-                                        <h4 class="c-subscribeWrap__subhead">Payment details</h4>
-                                    {% endif %}
-                                    <div class="form-group fullwidth">
-
-                                        {% if code %}
-                                        <form action="/charge" method="post" id="payment-form">
-                                            <div class="form-row ">
-                                                <label for="code-redeem">Gift code </label>
-                                                <input type="text" class="articleExtendedData" name="code-redeem"
-                                                    id="code-redeem" value="" placeholder="0a1b-2c3d-4e5f" />
-                                            </div>
-
-                                            <div class="form-group" style="margin-top:30px;">
-                                                <button type="submit" id="subscribe"
-                                                    class="c-button c-button-block c-button--lightBlue c-button--radius">Subscribe now</button>
-                                            </div>
-                                        </form>
-
-                                        {% else %}
-                                            {% if signup == false %}
-                                                <form action="/charge" method="post" id="payment-form" class="stripe-form">
-                                                    <div class="" style="min-width:100%">
-                                                        <div id="card-element">
-                                                            <!-- a Stripe Element will be inserted here. -->
-                                                        </div>
-                                                        <!-- Used to display form errors -->
-                                                        <div id="card-errors" class="c-account-form__errorText" role="alert">
-                                                        </div>
-                                                    </div>
-
-
-                                                    {% if config['subscribe-notice'] is defined %}
-                                                    {% set link = false %}
-                                                    {% if config['subscribe-notice']['link'] is defined %}
-                                                    {% set link = config['subscribe-notice']['link'] %}
-                                                    {% endif %}
-                                                    <p class="subscribe-multi-notice__bottom-p">*If you have a Farming Extra
-                                                        account with this email address already,
-
-                                                        {% if link %}
-                                                        <a class="subscribe-multi-notice__link-bottom" href="{{link}}">click
-                                                            here to add YPCT to your account.</a>
-                                                        {% endif %}
-                                                    </p>
-                                                    {% endif %}
-
-                                                    <div class="form-group" style="margin-top:30px;">
-                                                        <button type="submit" id="subscribe"
-                                                            class="c-button c-button-block c-button--lightBlue c-button--radius">Subscribe now</button>
-                                                    </div>
-                                                </form>
-                                            {% else %}
-                                                <form action="/charge" method="post" id="payment-form">
-                                                    <div class="form-group" style="margin-top:30px;">
-                                                        <button type="submit" id="subscribe"
-                                                            class="c-button c-button-block c-button--lightBlue c-button--radius">Subscribe now</button>
-                                                    </div>
-                                                </form>
-                                            {% endif %}
-                                        {% endif %}
-
-                                    </div>
-                                </div>
+                                
                             </div>
                         </div>
                         <div class="col-12 col-md-5 col-lg-4">
@@ -397,4 +384,5 @@
     document.addEventListener("DOMContentLoaded", function() {
         var signin = new Acme.Signin('signinForm', '#signin');
     });
+
 </script>
