--- a/layout-subscribe.twig
+++ b/layout-subscribe.twig
@@ -1,8 +1,22 @@
 {{ set(this, 'title', _Blog.getBlogTitle()) }}
+
+{% if not _User.isGuest() %}
+    {% set redir = _Page.setHttpRedirects(
+        { '|^/.*|': networkData.defaultBlogUrl ~ '/user/edit-profile', }, false) 
+    %} 
+{% endif %}
+
+
+
+
 {% set networkData = _Network.getNetworkData() %}
 {% set plans = _Paywall.getActiveNetworkPaywallPlans() %}
 {% set blogData		= _Blog.getBlog() %}
 {% set config = _Network.getThemeConfig() %}
+
+
+
+
 
 {% set plan = false %}
 {% set trial = false %}
@@ -381,8 +395,8 @@
 <script>
     // main script is defered so event listener makes sure
     // defered script is loaded before this runs
-    document.addEventListener("DOMContentLoaded", function() {
+    {# document.addEventListener("DOMContentLoaded", function() {
         var signin = new Acme.Signin('signinForm', '#signin');
-    });
+    }); #}
 
 </script>
