--- a/layout-subscribe.twig
+++ b/layout-subscribe.twig
@@ -167,6 +167,7 @@
                                         <label for="email" class="input__label">Email address</label>
                                         <input id="email" class="input__text" name="email" placeholder="Email address"
                                             aria-required="true" type="email" />
+                                        <input id="email-confirm" class="input__text u-hide" name="email-confirm" placeholder="email-confirm" aria-required="true" type="email">
                                         <div class="help-block"></div>
                                     </div>
 
